syntax = "proto3";
package artist.api.v1.proto;
import "validate/validate.proto";
option go_package = "github.com/e1esm/LyrVibe/artist-service/api/v1/proto";

enum Genre{
  HipHop = 0;
  Rock = 1;
  Electronic = 2;
  Metal = 3;
  Alternative = 4;
  Pop = 5;
  Reggae = 6;
  Folk = 7;
  Vocal = 8;
  Blues = 9;
  Jazz = 10;
  Classical = 11;
  Soundtrack = 12;
}

message VerificationRequest{
  string username = 1 [(validate.rules).string = {pattern: "(?i)^[A-Za-z0-9_]+$",min_len: 4, max_len: 10}];
  string country = 2 [(validate.rules).string ={pattern: "(?i)^[A-Z-a-z]+$", min_len: 2}];
  string first_name = 3 [(validate.rules).string = {pattern: "(?i)^[A-Za-z]+$", min_len: 1, max_len: 10}];
  string second_name = 4 [(validate.rules).string = {pattern: "(?i)^[A-Za-z]+$", min_len: 1, max_len: 20}];
  string id = 5;
}

message VerificationResponse{
  bool isVerified = 1;
  RequestStatus requestStatus = 2;
}

enum RequestStatus{
  OK = 0;
}

message NewTrackRequest{
  repeated string lyrics = 1;
  bytes cover = 2 [(validate.rules).bytes.min_len = 1];
  string title = 3 [(validate.rules).string = {pattern: "(?i)^[A-Za-z0-9]+$", min_len: 1, max_len: 50}];
  string release_date = 4;
  Genre genre = 5 [(validate.rules).enum.defined_only = true];
  string duration = 6 [(validate.rules).string = {pattern: "^([0-9]+[mM])?([0-9]+[sS])?$"}];
  string country = 7 [(validate.rules).string = {pattern: "(?i)^[A-Za-z]+$", min_len: 1, max_len: 50}];
  string video_link = 8;
  repeated string feature = 9;
}

message NewTrackResponse{
  string title = 1;
  RequestStatus requestStatus = 2;
}

service ArtistService{
  rpc Verify(VerificationRequest) returns (VerificationResponse) {};
  rpc AddTrack(NewTrackRequest) returns (NewTrackResponse) {};
}